# churn-prediction

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: base.yaml
scripts/: debug_dataset.py  evaluate.py  evaluate_tabular_and_plot.py  plot_metrics.py  train.py
src/data/: dataset.py
src/evaluation/: metrics.py
src/models/: fusion_model.py  tabular_baseline.py  text_encoder.py  time_series_encoder.py  time_series_only.py
src/training/: trainer.py
src/utils/: config.py
tests/: test_dataset.py  test_fusion_model.py  test_metrics.py  test_text_encoder.py  test_time_series_encoder.py  test_training_loop.py
